--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   
-  <h1>Main</h1>
+  <h1>OS</h1>
 
+
+  <script type="text/javascript" src="../controllers/main_controller.js"></script>
 </body>
 </html>
