added start screen

--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -3,12 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>NW OS</title>
+  <link rel="stylesheet" href="../assets/css/layout.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
-  
-  <h1>OS</h1>
+  <!-- dom start -->
+  <section class="screen start-screen">
+    <div class="start-screen-main">
+      <h1 class="start-screen-title">NWOS</h1>
+      <div class="start-screen-animation">
+        <p class="start-screen-dot start-screen-dot-0">
+          <span class="start-screen-dot-inner"></span>
+        </p>
+        <p class="start-screen-dot start-screen-dot-1">
+          <span class="start-screen-dot-inner"></span>
+        </p>
+        <p class="start-screen-dot start-screen-dot-2">
+          <span class="start-screen-dot-inner"></span>
+        </p>
+        <p class="start-screen-dot start-screen-dot-3">
+          <span class="start-screen-dot-inner"></span>
+        </p>
+        <p class="start-screen-dot start-screen-dot-4">
+          <span class="start-screen-dot-inner"></span>
+        </p>
+      </div>
+    </div>
+  </section>
 
+  <section class="screen main-screen">
+    
+  </section>
+  <!-- dom end -->
+
+  <script type="text/javascript" src="../assets/js/util.js"></script>
 
   <script type="text/javascript" src="../controllers/main_controller.js"></script>
+
 </body>
 </html>
