--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>NW OS</title>
   <link rel="stylesheet" href="../assets/css/layout.css">
+  <link rel="stylesheet" href="../assets/css/components.css">
   <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
   <!-- dom start -->
-  <section class="screen start-screen">
+  <!-- <section class="screen start-screen">
     <div class="start-screen-main">
       <h1 class="start-screen-title">NWOS</h1>
       <div class="start-screen-animation">
@@ -29,10 +30,19 @@
         </p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="screen main-screen">
-    
+    <div class="dock">
+      <button class="app-icon app-icon-chrome"></button>
+    </div>
+
+    <div class="window">
+      <div class="window-toolbar">
+        <button class="button window-cancel">X</button>
+      </div>
+      <div class="window-main"></div>
+    </div>
   </section>
   <!-- dom end -->
 
