added browser, kinda..

--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -41,7 +41,9 @@
       <div class="window-toolbar">
         <button class="button window-cancel">X</button>
       </div>
-      <div class="window-main"></div>
+      <div class="window-main">
+        <iframe class="browser" src="http://www.baidu.com" frameborder="0"></iframe>
+      </div>
     </div>
   </section>
   <!-- dom end -->
