--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- dom start -->
-  <!-- <section class="screen start-screen">
+  <section class="screen start-screen">
     <div class="start-screen-main">
       <h1 class="start-screen-title">NWOS</h1>
       <div class="start-screen-animation">
@@ -30,26 +30,18 @@
         </p>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <section class="screen main-screen">
     <div class="dock">
-      <button class="app-icon app-icon-chrome"></button>
-    </div>
-
-    <div class="window">
-      <div class="window-toolbar">
-        <button class="button window-cancel">X</button>
-      </div>
-      <div class="window-main">
-        <iframe class="browser" src="http://www.baidu.com" frameborder="0"></iframe>
-      </div>
+      <button class="app app-chrome"></button>
     </div>
   </section>
   <!-- dom end -->
 
   <script type="text/javascript" src="../assets/js/util.js"></script>
 
+  <script type="text/javascript" src="../controllers/app_controller.js"></script>
   <script type="text/javascript" src="../controllers/main_controller.js"></script>
 
 </body>
