--- a/NWOS.app/Contents/Resources/app.nw/assets/css/components.css
+++ b/NWOS.app/Contents/Resources/app.nw/assets/css/components.css
@@ -15,6 +15,8 @@
   bottom: 0;
   left: 0;
   margin: auto;
+  opacity: 0;
+  transition: width 0.5s, height 0.5s, margin 0.5s, opacity 0.3s;
 }
 
 .window-toolbar {
@@ -26,21 +28,34 @@
   cursor: move;
 }
 
-.window-cancel {
+.window-button {
   width: 14px;
   height: 14px;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.window-cancel {
   background: #f00;
   color: #f00;
-  border-radius: 50%;
 }
 .window-cancel:hover {
   background: #f33;
   color: #fff;
 }
 
+.window-maximize {
+  background: #0f0;
+  color: #0f0;
+}
+.window-maximize:hover {
+  background: #3f3;
+  color: #fff;
+}
+
 .window-main {
   width: 100%;
-  height: 330px;
+  height: 100%;
   border: 2px solid rgba(200, 200, 200, 0.7);
   border-top: none;
   border-radius: 0 0 5px 5px;
