--- a/NWOS.app/Contents/Resources/app.nw/views/main.html
+++ b/NWOS.app/Contents/Resources/app.nw/views/main.html
@@ -35,6 +35,8 @@
   <section class="screen main-screen">
     <div class="dock">
       <button class="app app-chrome"></button>
+      <button class="app app-map"></button>
+      <button class="app app-music"></button>
     </div>
   </section>
   <!-- dom end -->
