--- a/NWOS.app/Contents/Resources/app.nw/assets/css/main.css
+++ b/NWOS.app/Contents/Resources/app.nw/assets/css/main.css
@@ -80,8 +80,8 @@
 
 /* main screen start */
 .main-screen {
-  opacity: 1;
-  display: block;
+  opacity: 0;
+  display: none;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #41b784), color-stop(1, #6090b2));
 }
 
@@ -96,6 +96,10 @@
   background: rgba(255, 255, 255, 0.6);
   border-radius: 10px 10px 0 0;
   overflow: hidden;
+  transition: margin 0.3s;
+}
+.dock-hidden {
+  margin-bottom: -60px;
 }
 
 .app {
